--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
+    "lodash.flatmap": "^4.5.0",
     "luxon": "^1.4.4"
   },
   "devDependencies": {
     "@types/jest": "^23.3.8",
+    "@types/lodash.flatmap": "^4.5.4",
     "@types/luxon": "^1.4.0",
     "jest": "^23.6.0",
     "ts-jest": "^23.10.4",
